# CompactObject

./: .buildinfo  .readthedocs.yaml  BayesianSampler.html  Compose_eos.html  Contributor.html  Cornerplot.html  DownloadCompose.html  EMCEE_MIT_bag.html  EMCEE_RMF.html  EMCEE_polytrope.html  EMCEE_strangeon.html  EOS.html  EoS_import.html  Likelihood.html  MITbag_EOS.html  Polytrope_EOS.html  README.md  RMF_DDH.html  RMF_EOS.html  SpeedofSound_EOS.html  Strangeon_EOS.html  TOV_solver.html  UnitConventionForDeveloper.html  cluster.html  crust_EOS.html  fastRMF_EoS.html  genindex.html  index.html  installation.html  intro.html  main.html  objects.inv  prior.html  publications.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  speed_of_sound.html  (+12 more)
.doctrees/: BayesianSampler.doctree  Compose_eos.doctree  Contributor.doctree  Cornerplot.doctree  DownloadCompose.doctree  EMCEE_MIT_bag.doctree  EMCEE_RMF.doctree  EMCEE_polytrope.doctree  EMCEE_strangeon.doctree  EOS.doctree  EoS_import.doctree  Likelihood.doctree  MITbag_EOS.doctree  Polytrope_EOS.doctree  RMF_DDH.doctree  RMF_EOS.doctree  SpeedofSound_EOS.doctree  Strangeon_EOS.doctree  TOV_solver.doctree  UnitConventionForDeveloper.doctree  cluster.doctree  crust_EOS.doctree  environment.pickle  fastRMF_EoS.doctree  index.doctree  installation.doctree  intro.doctree  main.doctree  prior.doctree  publications.doctree  speed_of_sound.doctree  starthere.doctree  test_Bayesian_inference_DDH.doctree  test_Bayesian_inference_MITbag_EOS.doctree  test_Bayesian_inference_SpeedOfSound_EOS.doctree  (+5 more)
(+52 files in other folders)
