[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CompactObject_TOV"
version = "2.1"
authors = [
  { name="Chun Huang", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "contourpy",
  "corner",
  "cycler",
  "fonttools",
  "kiwisolver",
  "matplotlib",
  "numpy",
  "packaging",
  "pandas",
  "h5py",
  "numba",
  "pillow",
  "pyparsing",
  "python-dateutil",
  "six",
  "scipy",
  "sympy",
  "ultranest",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel",
  "jupyter",
  "nbconvert",
]
fast = [
  "NumbaMinpack",
]
docs = [
  "decorator",
  "ipynb",
  "nbsphinx",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinxcontrib-websupport",
]

[project.urls]
Homepage = "https://github.com/ChunHuangPhy/CompactOject"
Issues = "https://github.com/ChunHuangPhy/CompactOject/issues"

[tool.setuptools.packages.find]
include = [
  "EOSgenerators*",
  "InferenceWorkflow*",
  "postprocessing*",
  "TOVsolver*",
]
exclude = [
  "docs*",
  "Emcee_Workflow*",
  "JOSS*",
  "Test_Case*",
]

[tool.setuptools.package-data]
EOSgenerators = [
  "filesCompose/*",
  "filesLaL/*",
]
InferenceWorkflow = [
  "data/*",
]
